--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+<h2>Hola Habitantes de un España Grande y LIbre</h2>
 </body>
 </html>
